--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "watch": "vite build --watch",
+        "watch": "vite build --sourcemap true --watch",
         "dev": "vite"
     },
     "devDependencies": {
